fix background shadow overlapping with z-index on hover

--- a/app/assets/stylesheets/likes.scss
+++ b/app/assets/stylesheets/likes.scss
@@ -9,7 +9,7 @@
     margin-left: 450px;
     left: 5%;
     transform: translateX(-50%);
-    
+
     h1 {
   
       position: absolute;
@@ -21,22 +21,28 @@
     .likes-index-item-container {
 
       background-color: white;
+      position: relative;
       box-shadow: 0px 30px 70px -20px #adacaa;
       max-width: 600;
       width: 100%;
       min-width: 550px;
       height: 150px;
       padding: 30px;
+      margin-bottom: 5px;
       border: none;
       display: flex;
+      transition: box-shadow .5s ease;
       transition: transform .5s ease;
       &:hover {
         transform: scale(1.05);
+        z-index: 0;
         // width: 105%;
         // height: 105%;
         border-style: solid;
         border-color: #ff795f;
         border-width: 1px;
+        // box-shadow: none;
+        // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
       }
       .image-div-background {
         max-height: 150px;
